--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Muslimah Library </h1>
   <nav>
     <ul>
-        <li><a href="prototype/index.html">Link</a></li>
+        <li><a href="index.html">Muslimah Library</a></li>
 
             
     </ul>
